--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .no-scroll {
