styled scrollbar and ::selection and added backgrounded background image

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,13 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
+::selection {
+  background: rgba(154, 16, 99, 0.9);
+  color: white;
+}
+
+
+html::-webkit-scrollbar {
+	width: 10px;
+}
+
+html::-webkit-scrollbar-track {
+	background: transparent;
+}
+
+html::-webkit-scrollbar-thumb {
+	background: rgb(34, 10, 180, 0.5);
+	border-radius: 10px;
+}
+
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+	transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .no-scroll {
-  overflow: hidden;
+	overflow: hidden;
 }
