fixed build breaking issue

--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -37,6 +37,9 @@
     background-size: 50%;
     background-position: right top;
     background-position-y: -10%;
-    // background-position-x: 60rem;
   }
+}
+
+.test {
+  background-color: rgba(10, 10, 13, 0.675);
 }
