--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,6 @@
   color: white;
 }
 
-
 html::-webkit-scrollbar {
 	width: 10px;
 }
@@ -26,6 +25,7 @@ html::-webkit-scrollbar-thumb {
 	padding: 0;
 	margin: 0;
 	transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  cursor: none !important;
 }
 
 .no-scroll {
