--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,7 +25,7 @@
   opacity: 1;
 }
 
-#home {
+#home, #about, #work {
   background-image: url("/svg/test-2.svg");
   background-repeat: no-repeat;
   background-size: contain;
@@ -33,32 +33,70 @@
 }
 
 @media screen and (min-width: 480px) {
-  #home {
+  #home, #about, #work {
     background-position-y: -5%;
   }
 }
 @media screen and (min-width: 768px) {
-  #home {
+  #home, #about, #work {
     background-size: 80%;
     background-position-x: 20rem;
   }
 }
 @media screen and (min-width: 1024px) {
-  #home {
+  #home, #about, #work {
     background-size: 70%;
     background-position-x: 30rem;
   }
 }
 @media screen and (min-width: 1200px) {
-  #home {
+  #home, #about, #work {
     background-size: 60%;
     background-position-x: 40rem;
   }
 }
 @media screen and (min-width: 1600px) {
-  #home {
+  #home, #about, #work {
     background-size: 50%;
     background-position: right top;
     background-position-y: -10%;
   }
+}
+.test {
+  background-color: rgba(10, 10, 13, 0.675);
+}
+
+.cursor {
+  position: fixed;
+  height: 1rem;
+  width: 1rem;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  z-index: 150;
+  transition: all 400ms cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+#hover {
+  pointer-events: none;
+  height: 5.5rem;
+  width: 5.5rem;
+  background-color: transparent;
+  border-width: 1px;
+  transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+#hover-2 {
+  border-radius: 5px;
+  height: 25px;
+  width: 70px;
+  line-height: 1px;
+  background-color: transparent;
+  opacity: 0.8;
+  border-width: 1px;
+  transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+#hover-2::before {
+  content: "soon";
 }/*# sourceMappingURL=index.css.map */
