--- a/src/styles/_cursor.scss
+++ b/src/styles/_cursor.scss
@@ -8,7 +8,7 @@
 	z-index: 150;
 	transition: all 400ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
-#hover {
+#expand {
 	pointer-events: none;
 	height: 5.5rem;
 	width: 5.5rem;
@@ -16,7 +16,7 @@
 	border-width: 1px;
 	transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
-#hover-2 {
+#soon {
 	border-radius: 5px;
   height: 25px;
   width: 70px;
@@ -26,6 +26,12 @@
 	border-width: 1px;
 	transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
-#hover-2::before {
+
+#soon::before {
 	content: 'soon';
+}
+
+#type {
+  height: 1.5rem;
+  width: 2px;
 }
