--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -77,7 +77,7 @@
   transition: all 400ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
-#hover {
+#expand {
   pointer-events: none;
   height: 5.5rem;
   width: 5.5rem;
@@ -86,7 +86,7 @@
   transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
-#hover-2 {
+#soon {
   border-radius: 5px;
   height: 25px;
   width: 70px;
@@ -97,6 +97,11 @@
   transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
-#hover-2::before {
+#soon::before {
   content: "soon";
+}
+
+#type {
+  height: 1.5rem;
+  width: 2px;
 }/*# sourceMappingURL=index.css.map */
