--- a/src/styles/_cursor.scss
+++ b/src/styles/_cursor.scss
@@ -17,10 +17,11 @@
 	transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 #soon {
-	border-radius: 5px;
+	border-radius: 50px;
+  padding-bottom: 4px;
   height: 25px;
   width: 70px;
-  line-height: 1px;
+  font-size: 1rem;
   background-color: transparent;
 	opacity: .8;
 	border-width: 1px;
@@ -33,5 +34,6 @@
 
 #type {
   height: 1.5rem;
-  width: 2px;
+  width: 1px;
+  border-radius: 0;
 }
