--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1,4 +1,4 @@
-#home, #about, #work {
+body {
 	background-image: url('/svg/test-2.svg');
 	background-repeat: no-repeat;
 	background-size: contain;
@@ -6,34 +6,34 @@
 }
 
 @media screen and (min-width: 480px) {
-	#home, #about, #work {
+	body {
 		background-position-y: -5%;
 	}
 }
 
 @media screen and (min-width: 768px) {
-	#home, #about, #work {
+	body {
 		background-size: 80%;
 		background-position-x: 20rem;
 	}
 }
 
 @media screen and (min-width: 1024px) {
-	#home, #about, #work {
+	body {
 		background-size: 70%;
 		background-position-x: 30rem;
 	}
 }
 
 @media screen and (min-width: 1200px) {
-	#home, #about, #work {
+	body {
     background-size: 60%;
     background-position-x: 40rem;
 	}
 }
 
 @media screen and (min-width: 1600px) {
-  #home, #about, #work {
+  body {
     background-size: 50%;
     background-position: right top;
     background-position-y: -10%;
