--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,7 +25,7 @@
   opacity: 1;
 }
 
-#home, #about, #work {
+body {
   background-image: url("/svg/test-2.svg");
   background-repeat: no-repeat;
   background-size: contain;
@@ -33,37 +33,37 @@
 }
 
 @media screen and (min-width: 480px) {
-  #home, #about, #work {
+  body {
     background-position-y: -5%;
   }
 }
 @media screen and (min-width: 768px) {
-  #home, #about, #work {
+  body {
     background-size: 80%;
     background-position-x: 20rem;
   }
 }
 @media screen and (min-width: 1024px) {
-  #home, #about, #work {
+  body {
     background-size: 70%;
     background-position-x: 30rem;
   }
 }
 @media screen and (min-width: 1200px) {
-  #home, #about, #work {
+  body {
     background-size: 60%;
     background-position-x: 40rem;
   }
 }
 @media screen and (min-width: 1600px) {
-  #home, #about, #work {
+  body {
     background-size: 50%;
     background-position: right top;
     background-position-y: -10%;
   }
 }
 .test {
-  background-color: rgba(10, 10, 13, 0.675);
+  background-color: rgba(14, 11, 54, 0.9);
 }
 
 .cursor {
@@ -87,10 +87,11 @@
 }
 
 #soon {
-  border-radius: 5px;
+  border-radius: 50px;
+  padding-bottom: 4px;
   height: 25px;
   width: 70px;
-  line-height: 1px;
+  font-size: 1rem;
   background-color: transparent;
   opacity: 0.8;
   border-width: 1px;
@@ -103,5 +104,6 @@
 
 #type {
   height: 1.5rem;
-  width: 2px;
+  width: 1px;
+  border-radius: 0;
 }/*# sourceMappingURL=index.css.map */
