--- a/src/styles/_cursor.scss
+++ b/src/styles/_cursor.scss
@@ -2,18 +2,19 @@
 	position: fixed;
 	height: 1rem;
 	width: 1rem;
+  border-width: 1px;
 	border-radius: 50%;
 	transform: translate(-50%, -50%);
 	pointer-events: none;
 	z-index: 150;
-	transition: all 400ms cubic-bezier(0.075, 0.82, 0.165, 1);
+	transition: transform 300ms, width 300ms, border-radius 300ms, height 300ms, top 100ms, left 100ms;
+  transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 #expand {
 	pointer-events: none;
-	height: 5.5rem;
-	width: 5.5rem;
+	height: 5rem;
+	width: 5rem;
 	background-color: transparent;
-	border-width: 1px;
 	transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 #soon {
@@ -24,7 +25,6 @@
   font-size: 1rem;
   background-color: transparent;
 	opacity: .8;
-	border-width: 1px;
 	transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
