--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -70,19 +70,20 @@ body {
   position: fixed;
   height: 1rem;
   width: 1rem;
+  border-width: 1px;
   border-radius: 50%;
   transform: translate(-50%, -50%);
   pointer-events: none;
   z-index: 150;
-  transition: all 400ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  transition: transform 300ms, width 300ms, border-radius 300ms, height 300ms, top 100ms, left 100ms;
+  transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 #expand {
   pointer-events: none;
-  height: 5.5rem;
-  width: 5.5rem;
+  height: 5rem;
+  width: 5rem;
   background-color: transparent;
-  border-width: 1px;
   transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
@@ -94,7 +95,6 @@ body {
   font-size: 1rem;
   background-color: transparent;
   opacity: 0.8;
-  border-width: 1px;
   transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
@@ -106,4 +106,30 @@ body {
   height: 1.5rem;
   width: 1px;
   border-radius: 0;
+}
+
+.invisible {
+  opacity: 0;
+  transform: translateY(30%);
+}
+
+.off {
+  display: none;
+}
+
+.faillure-msg, .success-msg {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  position: fixed;
+  bottom: 2.5rem;
+  right: 50%;
+  translate: 50% 0;
+  padding: 0.75rem 1.25rem;
+  border: 1px solid white;
+  border-radius: 50px;
+  color: white;
+  text-align: center;
+  z-index: 1000;
+  transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
 }/*# sourceMappingURL=index.css.map */
