--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -26,44 +26,10 @@
 }
 
 body {
-  background-image: url("/svg/test-2.svg");
+  background-image: url("/images/background3.png");
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: 100%;
   background-position: top;
-}
-
-@media screen and (min-width: 480px) {
-  body {
-    background-position-y: -5%;
-  }
-}
-@media screen and (min-width: 768px) {
-  body {
-    background-size: 80%;
-    background-position-x: 20rem;
-  }
-}
-@media screen and (min-width: 1024px) {
-  body {
-    background-size: 70%;
-    background-position-x: 30rem;
-  }
-}
-@media screen and (min-width: 1200px) {
-  body {
-    background-size: 60%;
-    background-position-x: 40rem;
-  }
-}
-@media screen and (min-width: 1600px) {
-  body {
-    background-size: 50%;
-    background-position: right top;
-    background-position-y: -10%;
-  }
-}
-.test {
-  background-color: rgba(14, 11, 54, 0.9);
 }
 
 .cursor {
