--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -98,4 +98,27 @@ body {
   text-align: center;
   z-index: 1000;
   transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.icons {
+  display: flex;
+}
+
+.icon-slide {
+  display: flex;
+  animation: 15s slide infinite linear;
+}
+
+.icon-slide svg:hover {
+  scale: 0.9;
+  color: #5566FF;
+}
+
+@keyframes slide {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
 }/*# sourceMappingURL=index.css.map */
