--- a/src/styles/_cursor.scss
+++ b/src/styles/_cursor.scss
@@ -2,13 +2,14 @@
 	position: fixed;
 	height: 1rem;
 	width: 1rem;
-  border-width: 1px;
+	border-width: 1px;
 	border-radius: 50%;
 	transform: translate(-50%, -50%);
 	pointer-events: none;
 	z-index: 100;
-	transition: transform 300ms, width 300ms, border-radius 300ms, height 300ms, top 100ms, left 100ms;
-  transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
+	transition: transform 300ms, width 300ms, border-radius 300ms, height 300ms,
+		top 100ms, left 100ms;
+	transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 #expand {
 	pointer-events: none;
@@ -19,12 +20,12 @@
 }
 #soon {
 	border-radius: 50px;
-  padding-bottom: 4px;
-  height: 25px;
-  width: 70px;
-  font-size: 1rem;
-  background-color: transparent;
-	opacity: .8;
+	padding-bottom: 4px;
+	height: 25px;
+	font-weight: 500;
+	width: 70px;
+	color: white;
+	opacity: 0.8;
 	transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
@@ -32,8 +33,23 @@
 	content: 'soon';
 }
 
+#private {
+	border-radius: 50px;
+	padding-bottom: 4px;
+	font-weight: 500;
+	height: 30px;
+	width: 80px;
+	color: white;
+	opacity: 0.8;
+	transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+#private::before {
+	content: 'private';
+}
+
 #type {
-  height: 1.5rem;
-  width: 1px;
-  border-radius: 0;
+	height: 1.5rem;
+	width: 1px;
+	border-radius: 0;
 }
