--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -73,15 +73,30 @@
   border-radius: 50px;
   padding-bottom: 4px;
   height: 25px;
+  font-weight: 500;
   width: 70px;
-  font-size: 1rem;
-  background-color: transparent;
+  color: white;
   opacity: 0.8;
   transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 #soon::before {
   content: "soon";
+}
+
+#private {
+  border-radius: 50px;
+  padding-bottom: 4px;
+  font-weight: 500;
+  height: 30px;
+  width: 80px;
+  color: white;
+  opacity: 0.8;
+  transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+#private::before {
+  content: "private";
 }
 
 #type {
