--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -29,23 +29,25 @@
   background-position: center;
 }
 
-#home {
-  background-image: url("/images/test35.png");
+#home,
+#about,
+#work {
+  background-image: url("/svg/gradient.svg");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: top;
 }
 
-#about, #work {
-  background-image: url("/images/test34.png");
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-position: top;
+#main {
+  background: none;
 }
 
 @media only screen and (min-width: 768px) {
-  #home {
-    background-image: url("/images/test35.png");
+  #main {
+    background-image: url("/images/bigbox.png");
+    background-repeat: no-repeat;
+    background-size: 55%;
+    background-position: top right;
   }
 }
 .cursor {
