--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -11,7 +11,7 @@
 }
 
 .menu {
-	background-image: url('/images/menu-bg.png');
+	background-image: url('/images/menu-bg.webp');
 	background-repeat: no-repeat;
 	background-size: 100%;
 	background-position: center;
