--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -13,7 +13,7 @@
 
 @media only screen and (min-width: 768px) {
 	#main {
-		background-image: url('/images/bigbox.png');
+		background-image: url('/images/box.webp');
 		background-repeat: no-repeat;
 		background-size: 55%;
 		background-position: top right;
